# Starship-Command

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COPILOT-HANDOFF.md  DEVELOPER_GUIDE.md  DIRECTORY_INDEX.md  JULES-BRIEFING.md  JULES_STARSHIP_COMMAND_ENHANCED.md  JulesPrompting.md  PHASE-REPORT.md  PKGBUILD  README.md  RESEARCH_REPORT.md  STARSHIP_RESEARCH_REPORT.md  USER_GUIDE.md  build_exe.sh  capacitor.config.ts  color_extractor.py  commit_it.sh  eslint.config.js  github-workflows.md  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  prompt.md  pyproject.toml  quick-reference.md  run_dev.sh  starship-command-enhanced.desktop  starship-command-enhanced.install  starship-command-enhanced.sh  starship-command-python.sh  step-by-step-guide.md  (+7 more)
.Jules/: bolt.md  palette.md
.github/: copilot-instructions.md
.jules/: bolt.md
android/: DIRECTORY_INDEX.md  gradle.properties
assets/: DIRECTORY_INDEX.md  showcase-starship.toml  showcase.tape
dist-v1.3.0/: index.html
docs/: TESTING_COVERAGE_PATH.md
project_docs/: .master-manual.md.kate-swp  .quick-reference.md.kate-swp  ARCHITECTURE.md  CURRENT_STATUS.md  DEVELOPER_GUIDE.md  DIRECTORY_INDEX.md  FONTS_GUIDE.md  JULES_FISH_INTEGRATION.md  LEGACY-COPILOT-HANDOFF.md  MASTER_MANUAL.md  MODULES_GUIDE.md  NERD_FONTS_GUIDE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  TASKS.md  THEMES_GUIDE.md  USER_GUIDE.md  ai-assistant-guide.md  checkpoint-guide.md  copilot-instructions.md  github-workflows.md  jules-prompts.md  master-manual.md  (+4 more)
(+247 files in other folders)
